--- a/landing/index.html
+++ b/landing/index.html
@@ -2030,7 +2030,7 @@ display: none;
 <h2>Acknowledgments</h2>
 <p>This work is supported by:</p>
 <ul>
-<li>Rami Dass and <a href="https://atlas.illinois.edu/">ATLAS</a></li>
+<li><a href="https://atlas.illinois.edu/">ATLAS Infrastructure</a></li>
 <li><a href="https://sabermetrics.cs.illinois.edu/">Illini Analytics</a></li>
 </ul>
 <p>This work was improved by helpful comments and feedback from:</p>
