--- a/landing/index.html
+++ b/landing/index.html
@@ -2035,8 +2035,10 @@ display: none;
 </ul>
 <p>This work was improved by helpful comments and feedback from:</p>
 <ul>
-<li><a href="https://www.thecoatlessprofessor.com/">James Balamuta</a></li>
+<li><a href="http://baseball.physics.illinois.edu/">Alan Nathan</a></li>
 <li><a href="http://www-math.bgsu.edu/~albert/">Jim Albert</a></li>
+<li><a href="https://www.thecoatlessprofessor.com/">James Balamuta</a></li>
+<li><a href="http://www.stat.istics.net/">John Marden</a></li>
 <li><a href="http://home.iitk.ac.in/~dootika/">Dootika Vats</a></li>
 <li><a href="https://stat.illinois.edu/directory/profile/sdzhao">Dave Zhao</a></li>
 </ul>
