--- a/landing/index.html
+++ b/landing/index.html
@@ -2005,7 +2005,7 @@ display: none;
 <h2>Information</h2>
 <ul>
 <li><a href="https://seam.stat.illinois.edu/app/"><strong>Shiny App</strong></a> [ <a href="https://github.com/cdyoung/seam/">Source @ GitHub</a> ]</li>
-<li><a href="https://arxiv.org/abs/2005.07742">Article Preprint</a> [ <a href="https://arxiv.org/pdf/2005.07742.pdf">PDF</a> ] <!-- - [Fangraphs Article]() --></li>
+<li><a href="seam.pdf">Article Preprint PDF</a> <!-- - [Fangraphs Article]() --></li>
 </ul>
 </div>
 <div id="authors" class="section level2">
